nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: workshop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: workshop.local
    http:
      paths:
      - path: /ping
        backend:
          serviceName: nginx-svc
          servicePort: 80
